# Authenticator

./: .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPING.md  Makefile  README.md  backup-data.sh  build-flatpak.sh  meson.build  restore-data.sh
build-aux/: authenticator.spec  com.belmoussaoui.Authenticator.Devel.json  dist-vendor.sh
data/: com.belmoussaoui.Authenticator.desktop.in.in  com.belmoussaoui.Authenticator.metainfo.xml.in.in  meson.build  resources.gresource.xml
data/resources/ui/: account_add.ui  account_details_page.ui  backup_dialog.ui  camera.ui  keyring_error_dialog.ui  preferences.ui  provider_page.ui  providers_dialog.ui  shortcuts.ui  window.ui
favicon-scrapper/: Cargo.toml
favicon-scrapper/src/: favicon.rs  scrapper.rs
migrations/2025-03-01-145637_gnome_sso_provider/: down.sql  up.sql
po/: LINGUAS  POTFILES.in  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  he.po  hu.po  id.po  it.po  ka.po  kk.po  ko.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  uz.po  (+1 more)
src/: application.rs  meson.build
src/backup/: aegis.rs  andotp.rs  bitwarden.rs  google.rs  mod.rs  raivootp.rs  yandex.rs
src/models/: account.rs  algorithm.rs  database.rs  keyring.rs  mod.rs  otp.rs  otp_uri.rs  provider.rs  providers.rs  settings.rs
src/widgets/: camera.rs  camera_row.rs  error_revealer.rs  keyring_error_dialog.rs  mod.rs  progress_icon.rs  url_row.rs  window.rs
src/widgets/accounts/: add.rs  details.rs  qrcode_paintable.rs  row.rs
src/widgets/backup/: camera_page.rs  dialog.rs  mod.rs
src/widgets/preferences/: password_page.rs  window.rs
src/widgets/providers/: dialog.rs  dialog_row.rs  image.rs  list.rs  page.rs  row.rs
tools/keyring-fetcher/: Cargo.toml
tools/keyring-fetcher/src/: main.rs
