[package]
name = "keyring-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
oo7 = {version = "0.5", default-features = false, features = ["native_crypto", "tracing", "unstable", "tokio"]}
tokio = {version = "1.0", default-features = false, features = ["rt-multi-thread", "macros"]}
